[tool.poetry]
name = "saritasa-sqlalchemy-tools"
version = "0.1.0"
description = "Tools for sqlalchemy used by saritasa"
authors = [
  "Saritasa <pypi@saritasa.com>",
]
maintainers = [
    "Stanislav Khlud <stanislav.khlud@saritasa.com>",
]
homepage = "https://pypi.org/project/saritasa-sqlachemy-tools/"
repository = "https://github.com/saritasa-nest/saritasa-sqlachemy-tools/"
keywords = [
  "python",
  "sqlachemy"
]
license = "MIT"
readme = "README.md"
packages = [
  { include = "saritasa_sqlalchemy_tools" }
]

classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.plugins.pytest11]
saritasa_sqlalchemy_tools = "saritasa_sqlalchemy_tools.testing.plugin"

[tool.poetry.dependencies]
python = "^3.11"
# The Python SQL Toolkit and Object Relational Mapper
# https://docs.sqlalchemy.org/
sqlalchemy = {extras = ["mypy"], version = "<3"}
# Fast creating of model instances. May be used in tests
# https://factoryboy.readthedocs.io/en/stable/
factory-boy  = {version= "<4", optional = true}
# Data validation using Python type hints
# https://docs.pydantic.dev/latest/
pydantic = {version= "<3", optional = true}
# Alembic is a lightweight database migration tool for usage with the
# SQLAlchemy Database Toolkit for Python
# https://alembic.sqlalchemy.org/
alembic = {version= "<2", optional = true}
# AnyIO is an asynchronous networking and concurrency library
# that works on top of either asyncio or trio.
# https://anyio.readthedocs.io/en/stable/
anyio = {version= "<5", optional = true}

[tool.poetry.extras]
factories = ["factory-boy"]
auto_schema = ["pydantic"]
migrations = ["alembic"]
testing = ["anyio"]

[tool.poetry.group.dev.dependencies]
# Improved REPL
ipdb = "^0.13.13"
ipython = "^8.27.0"
# A framework for managing and maintaining multi-language pre-commit hooks.
# https://pre-commit.com/
pre-commit = "^3.8.0"
# Collection of invoke commands used by Saritasa
# Invoke is a Python (2.7 and 3.4+) task execution tool & library,
# drawing inspiration from various sources to arrive at a powerful & clean feature set.
# http://www.pyinvoke.org/
# https://github.com/saritasa-nest/saritasa-python-invocations/
saritasa_invocations = "^1.2.1"

[tool.poetry.group.linters.dependencies]
# Mypy is a static type checker for Python.
# https://mypy.readthedocs.io/en/stable/
mypy = "^1.11.2"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"
# To prettify pytest output
pytest-sugar = "^1.0.0"
# Coverage.py is a tool for measuring code coverage of Python programs.
# It monitors your program, noting which parts of the code have been executed,
# then analyzes the source to identify code that could have been executed but was not.
# https://coverage.readthedocs.io/en/latest/
coverage = "^7.6.1"
# asyncpg is a database interface library designed specifically for PostgreSQL
# and Python/asyncio.
# https://magicstack.github.io/asyncpg/current/
asyncpg = "^0.29.0"
# Alembic autogenerate support for creation, alteration and deletion of enums
# https://github.com/Pogchamp-company/alembic-postgresql-enum
alembic-postgresql-enum = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
extend-select = [
  # https://docs.astral.sh/ruff/rules/#pycodestyle-e-w
  "W",
  "E",
  # https://docs.astral.sh/ruff/rules/#mccabe-c90
  "C90",
  # https://docs.astral.sh/ruff/rules/#isort-i
  "I",
  # https://docs.astral.sh/ruff/rules/#pep8-naming-n
  "N",
  # https://docs.astral.sh/ruff/rules/#pydocstyle-d
  "D",
  # https://docs.astral.sh/ruff/rules/#pyupgrade-up
  "UP",
  # https://docs.astral.sh/ruff/rules/#flake8-annotations-ann
  "ANN",
  # https://docs.astral.sh/ruff/rules/#flake8-bandit-s
  "S",
  # https://docs.astral.sh/ruff/rules/#flake8-bugbear-b
  "B",
  # https://docs.astral.sh/ruff/rules/#flake8-builtins-a
  "A",
  # https://docs.astral.sh/ruff/rules/#flake8-commas-com
  "COM",
  # https://docs.astral.sh/ruff/rules/#flake8-comprehensions-c4
  "C4",
  # https://docs.astral.sh/ruff/rules/#flake8-datetimez-dtz
  "DTZ",
  # https://docs.astral.sh/ruff/rules/#flake8-debugger-t10
  "T10",
  # https://docs.astral.sh/ruff/rules/#flake8-django-dj
  "DJ",
  # https://docs.astral.sh/ruff/rules/#flake8-print-t20
  "T20",
  # https://docs.astral.sh/ruff/rules/#flake8-pytest-style-pt
  "PT",
  # https://docs.astral.sh/ruff/rules/#flake8-simplify-sim
  "SIM",
  # https://docs.astral.sh/ruff/rules/#flake8-use-pathlib-pth
  "PTH",
  # https://docs.astral.sh/ruff/rules/#flake8-todos-td
  "TD",
  # https://docs.astral.sh/ruff/rules/#eradicate-era
  "ERA",
  # https://docs.astral.sh/ruff/rules/#tryceratops-try
  "TRY",
  # https://docs.astral.sh/ruff/rules/#flynt-fly
  "FLY",
  # https://docs.astral.sh/ruff/rules/#perflint-perf
  "PERF",
  # https://docs.astral.sh/ruff/rules/#refurb-furb
  "FURB",
  # https://docs.astral.sh/ruff/rules/#flake8-pie-pie
  "PIE",
  # https://docs.astral.sh/ruff/rules/#flake8-async-async
  "ASYNC",
  # https://docs.astral.sh/ruff/rules/#ruff-specific-rules-ruf
  "RUF",
]
ignore = [
  # https://docs.astral.sh/ruff/rules/missing-type-self
  "ANN101",
  # https://docs.astral.sh/ruff/rules/missing-type-cls
  "ANN102",
  # https://docs.astral.sh/ruff/rules/any-type
  "ANN401",
  # https://docs.astral.sh/ruff/rules/missing-type-kwargs
  "ANN003",
  # https://docs.astral.sh/ruff/rules/undocumented-public-module
  "D100",
  # https://docs.astral.sh/ruff/rules/undocumented-public-package
  "D104",
  # https://docs.astral.sh/ruff/rules/undocumented-public-nested-class
  "D106",
  # https://docs.astral.sh/ruff/rules/undocumented-public-init
  "D107",
  # https://docs.astral.sh/ruff/rules/raise-vanilla-args
  "TRY003",
]
[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
  # https://docs.astral.sh/ruff/rules/unused-import
  "F401",
]
"**/tests/*" = [
  # https://docs.astral.sh/ruff/rules/assert
  "S101",
  # https://docs.astral.sh/ruff/rules/hardcoded-password-func-arg
  "S106",
  # https://docs.astral.sh/ruff/rules/suspicious-non-cryptographic-random-usage
  "S311",
]
"**/test_*" = [
  # https://docs.astral.sh/ruff/rules/missing-return-type-undocumented-public-function
  "ANN201",
]
[tool.ruff.lint.isort]
force-wrap-aliases = true
split-on-trailing-comma = true
section-order = [
    "future",
    "standard-library",
    "third-party",
    "sqlalchemy",
    "first-party",
    "local-folder",
]
[tool.ruff.lint.isort.sections]
sqlalchemy = [
  "sqlalchemy",
  "alembic"
]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
parametrize-names-type = "list"
parametrize-values-type = "list"
parametrize-values-row-type = "list"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
plugins = [
  "sqlalchemy.ext.mypy.plugin",
  "pydantic.mypy",
]
# https://mypy.readthedocs.io/en/stable/running_mypy.html#missing-imports
ignore_missing_imports = true
strict = false
warn_no_return = false
check_untyped_defs = true
disallow_any_generics = true
exclude = [
  "venv",
  ".venv",
]

[[tool.mypy.overrides]]
module = "tests/*"
disable_error_code = [
  "attr-defined",
  "operator",
]

[tool.pyright]
ignore = [
  # Disabled for tests because of dynamic nature of pytest
  "**/*test_*.py",
  "invocations/**"
]

[tool.pytest.ini_options]
# --capture=no
#   allow use of ipdb during tests
# --ff
#   run last failed tests first
addopts = [
    "--capture=no",
    "--ff",
]
# skip all files inside following dirs
norecursedirs = [
    "venv",
    ".venv",
]
sqlalchemy_database_driver="postgresql+asyncpg"
sqlalchemy_username="saritasa-sqlalchemy-tools-user"
sqlalchemy_password="manager"
sqlalchemy_host="postgres"
sqlalchemy_database="saritasa-sqlalchemy-tools-tests"
sqlalchemy_schema="public"

[tool.coverage.run]
omit = [
  "saritasa_sqlalchemy_tools/session.py",
]

[tool.coverage.report]
include = ["saritasa_sqlalchemy_tools/**"]

# https://docformatter.readthedocs.io/en/latest/configuration.html#
[tool.docformatter]
wrap-descriptions=0
in-place=true
blank=true
black=true
